Bug 1247935 - Part 1: double-buffer nsShmImage. r=jrmuizel